--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -1,4 +1,4 @@
-.pending-complaint-container {
+/* .pending-complaint-container {
     border: 1px solid #ccc;
     padding: 10px;
     margin-bottom: 10px;
@@ -6,7 +6,7 @@
     box-shadow: 0px 3px 6px #00000029;
     transition: transform 0.3s;
     cursor: pointer;
-    position: relative; /* Added position relative */
+    position: relative; 
   }
   
   .pending-complaint-container p {
@@ -16,7 +16,7 @@
   
   .pending-complaint-container:hover {
     transform: scale(1.03);
-  }
+  } */
   
   .complaint-details {
     display: flex;
@@ -36,3 +36,49 @@
     align-items: center;
     margin-bottom: 10px; /* Add some space between the search/sort and the complaints */
   }
+  /* Dashboard.css */
+
+.pending-container {
+  background-color: #f0f0f0; /* Light gray background color */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Shadow effect */
+}
+
+.pending-complaint-container {
+  position: relative;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.pending-complaint-container:hover {
+  background-color: #d5a894; /* Light green background color on hover */
+  cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+.pending-complaint-container .details-overlay {
+  display: none;
+  position: absolute;
+  top:calc(100% + 10px);;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f9f9f9; /* Same background color as the card */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  width: calc(100% - 40px); /* Adjust the width as needed */
+  max-width: 600px; /* Set a maximum width if necessary */
+  z-index: 1; 
+}
+
+.pending-complaint-container:hover .details-overlay {
+  display: block;
+}
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
