--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -18,7 +18,7 @@
     transform: scale(1.03);
   } */
   
-  .complaint-details {
+  /* .complaint-details {
     display: flex;
     justify-content: space-between;
     margin: 0;
@@ -29,20 +29,20 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-  }
+  } */
   .search-sort-container {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-bottom: 10px; /* Add some space between the search/sort and the complaints */
+    margin-bottom: 10px; 
   }
-  /* Dashboard.css */
+  
 
 .pending-container {
-  background-color: #f0f0f0; /* Light gray background color */
+  background-color: #f0f0f0; 
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Shadow effect */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
 .pending-complaint-container {
@@ -50,12 +50,12 @@
   margin-bottom: 20px;
   padding: 10px;
   border-radius: 8px;
-  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+  transition: background-color 0.3s ease; 
 }
 
 .pending-complaint-container:hover {
-  background-color: #d5a894; /* Light green background color on hover */
-  cursor: pointer; /* Change cursor to pointer on hover */
+  background-color: #d5a894; 
+  cursor: pointer;
 }
 
 .pending-complaint-container .details-overlay {
@@ -64,12 +64,12 @@
   top:calc(100% + 10px);;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #f9f9f9; /* Same background color as the card */
+  background-color: #f9f9f9; 
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  width: calc(100% - 40px); /* Adjust the width as needed */
-  max-width: 600px; /* Set a maximum width if necessary */
+  width: calc(100% - 40px); 
+  max-width: 600px; 
   z-index: 1; 
 }
 
